--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ForgotPassword"></activity>
+        <activity android:name=".uplaod_slidesjavaone"></activity>
+        <activity android:name=".javaone" />
+        <activity android:name=".listofslides" />
+        <activity android:name=".ForgotPassword" />
         <activity android:name=".LogIn" />
         <activity android:name=".MainActivity">
             <intent-filter>
